--- a/package.json
+++ b/package.json
@@ -28,9 +28,10 @@
   },
   "devDependencies": {
     "@storybook/addon-essentials": "^7.0.5",
-    "@storybook/addon-interactions": "^7.0.5",
+    "@storybook/addon-interactions": "^7.0.10",
     "@storybook/addon-links": "^7.0.5",
     "@storybook/blocks": "^7.0.5",
+    "@storybook/jest": "^0.1.0",
     "@storybook/nextjs": "^7.0.5",
     "@storybook/react": "^7.0.5",
     "@storybook/testing-library": "^0.0.14-next.2",
