--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "chromatic": "npx chromatic --project-token=$CHROMATIC_PROJECT_TOKEN"
+    "chromatic": "npx chromatic --project-token=$CHROMATIC_PROJECT_TOKEN",
+    "test-storybook": "test-storybook"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
@@ -27,6 +28,8 @@
     "yup": "^1.1.1"
   },
   "devDependencies": {
+    "@storybook/addon-a11y": "^7.0.10",
+    "@storybook/addon-coverage": "^0.0.8",
     "@storybook/addon-essentials": "^7.0.10",
     "@storybook/addon-interactions": "^7.0.10",
     "@storybook/addon-links": "^7.0.10",
@@ -34,6 +37,7 @@
     "@storybook/jest": "^0.1.0",
     "@storybook/nextjs": "^7.0.10",
     "@storybook/react": "^7.0.10",
+    "@storybook/test-runner": "^0.10.0",
     "@storybook/testing-library": "^0.1.0",
     "chromatic": "^6.17.4",
     "eslint-plugin-storybook": "^0.6.12",
