--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "chromatic": "npx chromatic --project-token=$CHROMATIC_PROJECT_TOKEN",
-    "test-storybook": "test-storybook"
+    "test-storybook": "test-storybook",
+    "test-storybook:ci": "wait-on tcp:6006 && test-storybook --junit"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
@@ -39,15 +40,17 @@
     "@storybook/react": "^7.0.10",
     "@storybook/test-runner": "^0.10.0",
     "@storybook/testing-library": "^0.1.0",
+    "axe-playwright": "^1.2.3",
     "chromatic": "^6.17.4",
     "eslint-plugin-storybook": "^0.6.12",
     "msw": "^1.2.1",
     "msw-storybook-addon": "^1.8.0",
-    "storybook": "^7.0.10"
+    "storybook": "^7.0.10",
+    "wait-on": "^7.0.1"
   },
   "readme": "ERROR: No README data found!",
   "_id": "web-fontmock@0.1.0",
   "msw": {
-    "workerDirectory": "public"
+    "workerDirectory": ".storybook/public"
   }
 }
