--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build-storybook": "storybook build",
     "chromatic": "npx chromatic --project-token=$CHROMATIC_PROJECT_TOKEN",
     "test-storybook": "test-storybook",
-    "test-storybook:ci": "wait-on tcp:6006 && npm run test-storybook -- --junit"
+    "test-storybook:ci": "npm run test-storybook -- --junit"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.1.0",
